# TJproxy

./: .gitignore  LICENSE  README  README.md  agent.policy.toml  agent.toml  agent_cli.py  doctor.bat  start.bat
agent_tests/: conftest.py  test_batch_scripts.py  test_cli.py  test_client.py  test_config.py  test_debug_server.py  test_end_to_end.py  test_policy.py  test_powershell.py  test_protocol.py  test_runner.py  test_tui.py  test_tui_support.py  test_workspace.py
docs/demos/: analysis.md
docs/demos/01-python-todo/: test_todo.py  todo.py
docs/demos/02-c-grade-stats/: main.c
docs/demos/03-cpp-bracket-checker/: main.cpp
docs/demos/05-js-markdown-headings/: index.js  package.json  test.js
docs/demos/06-python-textstats/: README.md  pyproject.toml
docs/demos/06-python-textstats/tests/: test_textstats.py
docs/demos/06-python-textstats/textstats/: __init__.py  counters.py  topwords.py
docs/demos/07-bugfix-palindrome/: test_palindrome.py
docs/demos/08-dispatch-refactor/: calculator.py  (+1 more)
extension/: background.js  content.js  manifest.json  package-lock.json  package.json
extension/lib/: background-utils.js  content-utils.js  offscreen-utils.js
extension/offscreen/: offscreen.html  offscreen.js
extension/test/: background.test.js  content.test.js  offscreen.test.js
server/: conftest.py  main.py  pytest.ini  requirements.txt  test_main.py
tjproxy_agent/: __init__.py  cli.py  client.py  config.py  debug_server.py  policy.py  powershell.py  prompt.py  protocol.py  runner.py  tui.py  tui_support.py  workspace.py
tmp/: test_files.json
(+14 files in other folders)
